--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
             <a class="btn btn-sm bg-warning text-white font-weight-bold" href="sobre.html" role="button">Saiba
                     mais</a>
             <p></p>
-            <a class="navbar-brand" href="https://pt-br.facebook.com"><img id="img1" src="img/facebook.png"></a>
+            <a class="navbar-brand" href="https://pt-br.facebook.com"><img id="img1" src="img/fb.png"></a>
             <a class="navbar-brand" href="https://www.instagram.com"><img id="img1" src="img/instagram.png"></a>
             <a class="navbar-brand" href="https://twitter.com"><img id="img1" src="img/twitter.png"></a>
         </div>
